<resources>
    <string name="app_name">Baller</string>
    <string name="logo">logo</string>
    <string name="bkgroundpicture">bkgroundpicture</string>
    <string name="desired_league">Desired League</string>
    <string name="mens">Mens</string>


    <string name="next">NEXT</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="find_the_a_team_in_your_city_and_dominate_the_league">Find the a team in your city and dominate the
        league
    </string>
    <string name="get_started">GET STARTED</string>
    <string name="womens">Womens</string>
    <string name="co_ed">CO-ED</string>
    <string name="i_am_a">I am a :</string>
    <string name="beginner">BEGINNER</string>
    <string name="baller">BALLER</string>
    <string name="finish">FINISH</string>
    <string name="search_l">Looking for a co-ed beginer league near you......</string>

</resources>
