<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Controller.LeagueActivity">
    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/desiredleaguebg"
            android:id="@+id/imageView4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:scaleType="centerCrop"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="1.0"
            android:contentDescription="@string/bkgroundpicture"/>
    <ImageView
            android:layout_width="113dp"
            android:layout_height="113dp" app:srcCompat="@drawable/ballerlogo"
            android:id="@+id/imageView3"
            android:scaleType="fitCenter" android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="@+id/imageView" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            android:contentDescription="@string/logo" tools:ignore="UnknownIdInLayout"/>
    <TextView
            android:text="@string/desired_league"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" android:textSize="20sp"
            android:fontFamily="@font/muli_extrabold" android:textColor="@android:color/background_light"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView3"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="326dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/imageView4"
            app:layout_constraintEnd_toEndOf="@+id/imageView4" android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp" android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
            android:layout_marginTop="90dp" app:layout_constraintTop_toBottomOf="@+id/textView">
        <ToggleButton
                android:text="@string/mens"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/mensBtn" android:textOff="@string/mens" android:textOn="@string/mens"
                android:background="@drawable/baller_toogle"
                android:textColor="@android:color/background_light" android:onClick="mensClicked"/>
        <ToggleButton
                android:text="@string/womens"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/womensButton" android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp" android:textOff="@string/womens" android:textOn="@string/womens"
                android:textColor="@android:color/background_light"
                android:background="@drawable/baller_toogle" android:onClick="womensClicked"/>
        <ToggleButton
                android:text="@string/co_ed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/coedButton" android:textOff="Co-ED"
                android:textOn="@string/co_ed" android:background="@drawable/baller_toogle"
                android:textColor="@android:color/background_light" tools:ignore="HardcodedText"
                android:onClick="coedClicked"/>
    </LinearLayout>
    <Button
            android:text="@string/next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/leagueNextBtn" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView4" android:fontFamily="@font/muli_extrabold"
            android:textColor="@color/colorAccent" android:background="@drawable/baller_button"
            android:onClick="leagueNextClicked"/>
</android.support.constraint.ConstraintLayout>