<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Controller.MainActivity">
    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/welcomescreenbg"
            android:id="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.5"
            android:scaleType="centerCrop" app:layout_constraintVertical_bias="0.0"
            android:contentDescription="@string/bkgroundpicture"/>
    <ImageView
            android:layout_width="113dp"
            android:layout_height="113dp" app:srcCompat="@drawable/ballerlogo"
            android:id="@+id/imageView3"
            android:scaleType="fitCenter" android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="@+id/imageView" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            android:contentDescription="@string/logo"/>
    <TextView
            android:text="@string/go_all_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/goallin"
            android:gravity="center"
            android:textColor="@android:color/background_light" android:fontFamily="@font/muli_extrabold"
            android:textSize="46sp" android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="8dp" android:layout_marginTop="60dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView3"/>
    <TextView
            android:text="@string/on_going_all_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" android:textSize="30sp"
            android:fontFamily="@font/muli_extrabold" android:textColor="@android:color/background_light"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="@+id/imageView" android:layout_marginRight="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/goallin"/>
    <TextView
            android:text="@string/find_the_a_team_in_your_city_and_dominate_the_league"
            android:layout_width="280dp"
            android:layout_height="72dp"
            android:id="@+id/textView3" android:singleLine="false"
            android:gravity="center"
            android:textColor="@android:color/background_light" android:textSize="15sp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="@+id/imageView" android:layout_marginLeft="8dp"
            android:fontFamily="@font/muli_extrabold" android:textStyle="bold"/>
    <Button
            android:text="@string/get_started"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:id="@+id/getStartedButton" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView" android:textSize="18sp"
            android:fontFamily="@font/muli_extrabold" android:textColor="@color/colorAccent"
            style="@style/Widget.AppCompat.Button" app:layout_constraintHorizontal_bias="0.0"
            android:background="@drawable/baller_button" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3" app:layout_constraintVertical_bias="1.0"/>
</android.support.constraint.ConstraintLayout>